--- a/index.html
+++ b/index.html
@@ -169,9 +169,31 @@ var App=typeof App==='undefined'?0:App;
 		
 		<div id="sectionRight" class="inset">
 			<!-- ad -->
-			<div class="ifNoAds" style="width:300px;text-align:center;padding:8px 0px;background:rgba(0,0,0,0.95);font-size:10px;opacity:0.5;text-shadow:0px 0px 2px #000,0px 1px 0px #000;text-align:center;">
-				Cookie Clicker is mainly supported by ads.<br>Consider unblocking our site or checking out our <a href="https://www.patreon.com/dashnet" target="_blank">Patreon</a>!
-			</div>
+			<head>
+  <meta charset="utf-8">
+  <title>JavaScript Toggle (Play/Pause) Sound on Click Event of DOM Element</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+<button id="player" type="button"
+  onclick="javascript:toggleSound();">
+  Music
+</button>
+<audio id="audio">
+  <source src="music/ascend.mp3" type="audio/mpeg">
+Your browser does not support this audio format.
+</audio>
+
+<script type="text/javascript">
+function toggleSound() {
+  var audioElem = document.getElementById('audio');
+  if (audioElem.paused)
+    audioElem.play();
+  else
+    audioElem.pause();
+}
+</script>
 			<div id="smallSupport" style="width:300px;text-align:center;padding-bottom:40px;background:rgba(0,0,0,0.5);position:relative;z-index:100;">
 				
 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
