--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ var App=typeof App==='undefined'?0:App;
 
 <button id="player" type="button"
   onclick="javascript:toggleSound();">
-  Music
+  Ascend
 </button>
 <audio id="audio">
   <source src="music/ascend.mp3" type="audio/mpeg">
