--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ var App=typeof App==='undefined'?0:App;
 </head>
 <body>
 
-<button id="player0" type="button"
+<button id="playeb" type="button"
   onclick="javascript:toggleSound();">
   Ascend
 </button>
