--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ var App=typeof App==='undefined'?0:App;
       const audios = new Array(srcArr.length).fill(new Audio());
       audios.forEach((audio, index) => audio.src = srcArr[index]);
 </script>
-			<button id="button" onclick="audios[0].play();"> click me </button>
-<button id="button" onclick="audios[1].play();"> click me </button>
+			<button id="button" onclick="ascend.play();"> click me </button>
+<button id="button" onclick="click.play();"> click me </button>
 
 			
 			<div id="smallSupport" style="width:300px;text-align:center;padding-bottom:40px;background:rgba(0,0,0,0.5);position:relative;z-index:100;">
